# PhysXMinimalExample

./: CMakeLists copy.txt  CMakeLists.txt  main.cpp
libs/PhysX/: CMakeLists.txt
